# cpp_server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: HttpsClient.hpp  IResource.hpp  ResourceMapper.hpp  Server.hpp  SocketHandler.hpp
include/api/: Hello.hpp  Hello_Id.hpp
include/utils/: HttpUtils.hpp  QueryParamRules.hpp  StringUtils.hpp  http_headers.hpp  http_status.hpp  type_checker.hpp
src/: HttpsClient.cpp  ResourceMapper.cpp  Server.cpp  SocketHandler.cpp  main.cpp
src/api/: Hello.cpp  Hello_Id.cpp
src/utils/: HttpUtils.cpp  StringUtils.cpp  type_checker.cpp
